[package]
name = "fakemail"
version = "0.1.1"
authors = ["Ben Campbell <ben@scumways.com>"]
edition = "2018"

[dependencies]
fake = {version="3.0.1", features=['chrono']}
rand = "0.8"
chrono = "0.4.23"
clap = { version = "3.0.7", features = ["derive"] }
encoding = "0.2.33"
base64 = "0.22.1"
mime = "0.3.17"
